<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gosh.com.accookeepersdk.activity.SettingsActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/save"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        tools:context="gosh.com.accookeepersdk.activity.SettingsActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/app_root_folder" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/drive_root_folder"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_root_folder_hint"
                android:enabled="false"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/select_root"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/select_root"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="14sp"
                android:text="@string/select"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/app_config_file" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/app_config_file"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_config_file_hint"
                android:enabled="false"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/select_root"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/select_config"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="14sp"
                android:text="@string/select"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
